--- a/style.css
+++ b/style.css
@@ -92,6 +92,10 @@ html {
     display: inline-block
     ;
   }
+
+  .link {
+   margin-top: 50px ;
+  }
   
   @media screen and (max-width: 660px) {
     #obor {
